clean template and fix z-index of navbar

--- a/src/styles/pages/pima.scss
+++ b/src/styles/pages/pima.scss
@@ -17,15 +17,14 @@
   }
 
   .navbar-ofc {
-    width:     100%;
-    
+    width: 100%;
     display: block;
     padding: 2vh 40px;
     background-color: #fff;
   }
 
   .navbar-ofc.ofc {
-    z-index: 99999;
+    z-index: 9;
     display: block;
     padding-right: 4vh;
     padding-left: 4vh;
